--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint --ext .js,.vue ."
   },
   "dependencies": {
+    "bootstrap-vue": "^2.22.0",
     "nuxt": "^2.14.0"
   },
   "devDependencies": {
